--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,15 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
+	<div class="container">
+		<div class="header clarfix">
+			<h3 class="text-muted">FlightBooker</h3>
+		</div>
+		<%= yield %>
+		<div class="footer">
+			<p>Flightbooker by <a href="www.github.com/patrickmontalto">Patrick Montalto</a></p>
+		</div>
+	</div>
 
 </body>
 </html>
