--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 <body>
 	<div class="container">
 		<div class="header clarfix">
-			<h3 class="text-muted">FlightBooker</h3>
+			<h3 class="text-muted"><%= link_to "FlightBooker", root_path, html_options = {class: "deco-none"} %></h3>
 		</div>
 		<%= yield %>
 		<div class="footer">
