--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,32 +10,5 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
+ *= require_tree .
  */
-@import "bootstrap-sprockets";
-@import "bootstrap";
-
-.container {
-	max-width: 800px;
-}
-
-.jumbotron {
-	background-image:url('http://goo.gl/04j7Nn');
-	padding-top: 110px;
-}
-
-.jumbotron h1 {
-  color: #fff;
-  font-size: 48px;  
-  font-family: 'Shift', sans-serif;
-  font-weight: bold;
-}
-
-.jumbotron p {
-  font-size: 20px;
-  color: #fff;
-}
-
-a.deco-none {
-	color: inherit;
-	text-decoration: none;
-}
