--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,11 @@
 </head>
 <body>
 	<div class="container">
-		<div class="header clarfix">
-			<h3 class="text-muted"><%= link_to "FlightBooker", root_path, html_options = {class: "deco-none"} %></h3>
+		<div class="header">
+			<h3 class="text-muted"><%= link_to "FlightBooker", root_path, html_options = {class: "deco-none"} %>
+			<%= link_to "Bookings", bookings_path, html_options = {class: "pull-right text-muted" } %></h3>
 		</div>
+
 		<%= yield %>
 		<div class="footer">
 			<p>Flightbooker by <a href="www.github.com/patrickmontalto">Patrick Montalto</a></p>
