--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 
 		<%= yield %>
 		<div class="footer">
-			<p>Flightbooker by <%= link_to "Patrick Montalto", "www.github.com/patrickmontalto" %></p>
+			<p>Flightbooker by <%= link_to "Patrick Montalto", "http://www.github.com/patrickmontalto" %></p>
 		</div>
 	</div>
 
